--- a/Proyecto2/Frontend/app/templates/admin.html
+++ b/Proyecto2/Frontend/app/templates/admin.html
@@ -35,13 +35,13 @@
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="{% url 'adminEstadisticas' %}">
                             <img src="https://img.icons8.com/ios-filled/50/000000/bar-chart.png" alt="Estadísticas Icon">
                             Ver estadísticas
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="{% url 'cerrarSesion' %}">
                             <img src="https://img.icons8.com/ios-filled/50/000000/shutdown.png" alt="Cerrar Sesión Icon">
                             Cerrar sesión
                         </a>
